objects/evt__Event_Coupon__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Coupons for use with the event management add-on for PaymentConnect</description>
    <fields>
        <fullName>evt__Amount__c</fullName>
        <description>Amount of discount.</description>
        <inlineHelpText>Amount of discount.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>evt__Category__c</fullName>
        <description>Category or type of event registrant (Attendee, Sponsor, Exhibitor) to make coupon valid for.  Leave blank to allow all categories to use coupon.</description>
        <inlineHelpText>Category or type of event registrant (Attendee, Sponsor, Exhibitor) to make coupon valid for.  Leave blank to allow all categories to use coupon.</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Event__c</fullName>
        <description>SF record Id of the event this coupon can be applied to. If blank, coupon can be applied to any active event.</description>
        <inlineHelpText>SF record Id of the event this coupon can be applied to. If blank, coupon can be applied to any active event.</inlineHelpText>
        <label>Event</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Exclude_Event_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude event fees from the coupon discount.</description>
        <inlineHelpText>Exclude event fees from the coupon discount.</inlineHelpText>
        <label>Exclude Event Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>evt__Exclude_Event_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude event products from the coupon discount.</description>
        <inlineHelpText>Exclude event products from the coupon discount.</inlineHelpText>
        <label>Exclude Event Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>evt__Exclude_Session_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude session fees from the coupon discount.</description>
        <inlineHelpText>Exclude session fees from the coupon discount.</inlineHelpText>
        <label>Exclude Session Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>evt__Expires__c</fullName>
        <description>Last date coupon is valid.</description>
        <inlineHelpText>Last date coupon is valid.</inlineHelpText>
        <label>Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>evt__Percent__c</fullName>
        <description>Percent discount (e.g. 6.5 for 6.5%)</description>
        <inlineHelpText>Percent discount (e.g. 6.5 for 6.5%)</inlineHelpText>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>evt__Type__c</fullName>
        <description>Type of discount provided by the coupon. Expected values: Percent, Amount</description>
        <inlineHelpText>Type of discount provided by the coupon. Expected values: Percent, Amount</inlineHelpText>
        <label>Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Valid_From__c</fullName>
        <description>Date coupon becomes valid.</description>
        <inlineHelpText>Date coupon becomes valid.</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <label>Event Coupon</label>
</CustomObject>